2004-02-21  Stephen Compall  <s11@member.fsf.org>

	* saveplace.el (save-place-forget-unreadable-files)
	(save-place-save-skipped, save-place-skip-check-regexp): New
	defcustoms.
	(save-place-forget-unreadable-files): New function.
	(save-place-alist-to-file): Use it to filter out files that are
	no longer readable.

	* textmodes/texinfo.el (texinfo-insert-@item): Look for the
	current Texinfo environment, using the same method as in
	`texinfo-insert-@end', and insert a space rather than a newline if
	point in a @table environment.

2004-02-21  Juri Linkov  <juri@jurta.org>

	* ffap.el (ffap-file-at-point): Try parent directories.

2004-02-21  Klaus Zeitler  <kzeitler@lucent.com>

	* vcursor.el (vcursor-modifiers): New defcustom.
	(vcursor-cs-binding): Use vcursor-modifiers instead of a
	hard-coded list.

2004-02-21  Masatake YAMATO  <jet@gyve.org>

	* play/animate.el (animate-birthday-present): Accept names other
	than `Sarah', too.

2004-02-21  Juri Linkov  <juri@jurta.org>

	* startup.el: Remove table of command line arguments from the
	Commentary section.

2004-02-20  John Wiegley  <johnw@newartisans.com>

	* eshell/em-pred.el (eshell-modifier-alist): Changed the "eval
	again" modifier from 'e' to 'E', since 'e' is also used by the
	"file extension" modifier.

2004-02-19  Luc Teirlinck  <teirllm@auburn.edu>

	* help-fns.el (describe-categories): Doc fix.

2003-02-19  Michael Kifer  <kifer@cs.stonybrook.edu>

	* ediff-util.el (ediff-compute-custom-diffs-maybe): Avoid creating
	temporary file for buffer already visiting one.  This change makes
	output likely to be directly usable by patch program.
	Suggested by Adrian Aichner  <adrian@xemacs.org>

2004-02-20  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-use-colon-colon-notation): Set default to nil for
	case of variables defined in compound statements.
	(gdb-setup-windows, gdb-source-info, gdb-source-info): Simplify
	constructions using switch-to-buffer.

2004-02-19  Simon Josefsson  <jas@extundo.com>